cmake_minimum_required(VERSION 3.21)
project(UDP_Server_C LANGUAGES C)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
include("${CMAKE_BINARY_DIR}/conan_toolchain.cmake")
# find_package(httplib REQUIRED)
add_executable(main src/main.c)
# target_link_libraries(main PRIVATE httplib::httplib)